--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
   "bugs": {
     "url": "https://github.com/wouldgo/signaler/issues"
   },
-  "homepage": "https://github.com/wouldgo/signaler"
+  "homepage": "https://github.com/wouldgo/signaler",
+  "dependencies": {
+    "hiredis": "^0.3.0",
+    "redis": "^0.12.1",
+    "rsvp": "^3.0.18",
+    "ws": "^0.7.1"
+  }
 }
