--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "files": [
+    "index.js",
     "client.js"
   ],
   "repository": {
