--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "siglr",
   "version": "1.1.3",
   "description": "",
-  "main": "index.js",
+  "main": "src/node/index.js",
   "scripts": {
-    "lint": "eslint -c config/eslint.json .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint -c config/eslint.json src"
   },
   "files": [
     "index.js",
@@ -24,10 +23,10 @@
   "dependencies": {
     "hiredis": "^0.3.0",
     "redis": "^0.12.1",
-    "rsvp": "^3.0.18",
-    "ws": "^0.7.1"
+    "comunicator": "^1.0.1"
   },
   "devDependencies": {
-    "eslint": "^0.18.0"
+    "eslint": "^0.19.0",
+    "uglifyjs": "^2.4.10"
   }
 }
