--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/node/index.js",
   "scripts": {
+    "test": "node spec/start-node.js",
     "lint": "eslint -c .eslintrc src && jscs -c .jscs src"
   },
   "files": [
@@ -26,6 +27,8 @@
   "devDependencies": {
     "eslint": "*",
     "jscs": "*",
-    "uglifyjs": "*"
+    "uglifyjs": "*",
+    "hapi": "*",
+    "jsonwebtoken": "*"
   }
 }
