--- a/package.json
+++ b/package.json
@@ -35,11 +35,12 @@
     "eslint": "*",
     "hapi": "*",
     "husky": "*",
+    "inert": "*",
     "jscs": "*",
-    "jshint": "^2.8.0",
+    "jshint": "*",
     "jsonwebtoken": "*",
     "node-inspector": "*",
-    "plato": "^1.5.0",
+    "plato": "*",
     "uglifyjs": "*"
   }
 }
