--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "debug": "node-debug spec/start-node.js",
     "lint": "eslint -c .eslintrc src && jshint -c .jshintrc --reporter=unix src && jscs -c .jscsrc src",
     "precommit": "npm run-script lint",
-    "postversion": "min"
+    "postversion": "npm run-script min"
   },
   "files": [
     "src/node/index.js",
