another configuration test

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "lint": "eslint -c .eslintrc src && jshint -c .jshintrc --reporter=unix src && jscs -c .jscsrc src",
     "precommit": "npm run-script lint",
     "preversion": "npm run-script lint",
-    "version": "npm run-script min && ./tasks/bower-version-bump",
-    "postversion": "git add -A . && git push && git push --tags"
+    "version": "npm run-script min && ./tasks/bower-version-bump && git add -A .",
+    "postversion": "git push && git push --tags"
   },
   "files": [
     "src/node/index.js",
