--- a/.jshintrc
+++ b/.jshintrc
@@ -3,18 +3,17 @@
   "laxcomma": true,
   "curly": true,
   "eqeqeq": true,
-  "es3": true,
+  "esnext": true,
   "forin": true,
   "freeze": true,
   "futurehostile": true,
-  "latedef": false,
+  "latedef": true,
   "noarg": true,
   "nocomma": true,
   "nonbsp": true,
   "nonew": true,
   "notypeof": true,
   "singleGroups": true,
-  "strict": true,
   "undef": true,
   "unused": true,
   "plusplus": true
