--- a/package.json
+++ b/package.json
@@ -3,18 +3,6 @@
   "version": "3.0.7",
   "description": "",
   "main": "src/node/index.js",
-  "scripts": {
-    "js-min": "./tasks/banner | xargs -0 -I banner uglifyjs src/js/signaler.js --preamble banner -c -m --screw-ie8 -p relative --source-map dist/signaler.min.js.map -o dist/signaler.min.js",
-    "ng-min": "./tasks/banner | xargs -0 -I banner uglifyjs src/js/signaler.js src/angular/signaler.js --preamble banner -c -m --screw-ie8 -p relative --source-map dist/signaler-angular.min.js.map -o dist/signaler-angular.min.js",
-    "min": "npm run-script js-min && npm run-script ng-min && plato -r -d report -l .jshintrc -t \"signaler\" src/",
-    "test": "node spec/start-node.js",
-    "debug": "node-debug spec/start-node.js",
-    "lint": "eslint -c .eslintrc src && jshint -c .jshintrc --reporter=unix src && jscs -c .jscsrc src",
-    "precommit": "npm run-script lint",
-    "preversion": "npm run-script lint",
-    "version": "npm run-script min && ./tasks/bower-version-bump && git add -A .",
-    "postversion": "git push && git push --tags"
-  },
   "files": [
     "src/node/index.js",
     "src/js/signaler.js",
@@ -31,19 +19,51 @@
   },
   "homepage": "https://github.com/720kb/signaler",
   "dependencies": {
-    "comunicator": "^2.2.4",
-    "webrtc-adapter-test": "*"
+    "comunicator": "^3.1.0",
+    "debug": "^2.2.0",
+    "harmony-reflect": "^1.4.2",
+    "rxjs": "^5.0.0-beta.2",
+    "webrtc-adapter": "^1.0.2"
   },
   "devDependencies": {
-    "eslint": "*",
-    "hapi": "*",
-    "husky": "*",
-    "inert": "*",
-    "jscs": "*",
-    "jshint": "*",
-    "jsonwebtoken": "*",
-    "node-inspector": "*",
-    "plato": "*",
-    "uglifyjs": "*"
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-es2015-rollup": "^1.1.1",
+    "code": "^2.1.0",
+    "del": "^2.2.0",
+    "eslint": "^2.2.0",
+    "gulp": "^3.9.0",
+    "gulp-babel": "^6.1.1",
+    "gulp-eslint": "^2.0.0",
+    "gulp-header": "^1.7.1",
+    "gulp-jscs": "^3.0.2",
+    "gulp-jshint": "^2.0.0",
+    "gulp-ng-annotate": "^1.1.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-shell": "^0.5.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "hapi": "^13.0.0",
+    "husky": "^0.11.1",
+    "inert": "^3.2.0",
+    "jscs": "^2.10.0",
+    "jshint": "^2.9.1-rc2",
+    "jshint-stylish": "^2.1.0",
+    "lab": "^9.1.0",
+    "node-inspector": "^0.12.5",
+    "require-dir": "^0.3.0",
+    "rollup": "^0.25.4",
+    "rollup-plugin-babel": "^2.4.0",
+    "rollup-plugin-uglify": "^0.2.0",
+    "run-sequence": "^1.1.5",
+    "rxjs-es": "^5.0.0-beta.2"
+  },
+  "scripts": {
+    "lint": "gulp lint",
+    "test": "gulp test",
+    "example": "npm run-script test && gulp example",
+    "example-debug": "npm run-script test && gulp example-debug",
+    "precommit": "gulp test-pre-commit",
+    "preversion": "npm run-script test",
+    "version": "./tasks/bower-version-bump && git add -A .",
+    "postversion": "git push && git push --tags"
   }
 }
