--- a/.eslintrc
+++ b/.eslintrc
@@ -63,7 +63,7 @@
       2,
       "smart"
     ],
-    "guard-for-in": 1,
+    "guard-for-in": 2,
     "no-alert": 1,
     "no-caller": 2,
     "no-case-declarations": 0,
@@ -121,7 +121,10 @@
       2,
       "outside"
     ],
-    "yoda": 2,
+    "yoda": [
+      2,
+      "never"
+    ],
     "strict": [
       2,
       "safe"
@@ -254,7 +257,10 @@
       2,
       "never"
     ],
-    "one-var": 2,
+    "one-var": [
+      2,
+      "always"
+    ],
     "operator-assignment": [
       2,
       "always"
@@ -263,7 +269,10 @@
       2,
       "after"
     ],
-    "quote-props": 2,
+    "quote-props": [
+      2,
+      "always"
+    ],
     "quotes": [
       2,
       "single",
@@ -335,6 +344,17 @@
     "prefer-const": 1,
     "prefer-spread": 1,
     "prefer-template": 2,
-    "require-yield": 2
+    "require-yield": 2,
+    "indent": [
+      2,
+      2,
+      {
+        "SwitchCase": 1
+      }
+    ],
+    "max-len": [
+      2,
+      500
+    ]
   }
 }
